Table produksi_repair {
    id bigint
    tanggal date
    kendala varchar
    created_at timestamp
    updated_at timestamp
}

Table modal_repairs {
    id bigint
    id_produksi_repair bigint [ref: > produksi_repair.id]
    id_ukuran bigint
    id_jenis_kayu bigint
    jumlah int
    kw varchar
    nomor_palet int
    created_at timestamp
    updated_at timestamp
}

Table rencana_pegawais {
    id bigint
    id_produksi_repair bigint [ref: > produksi_repair.id]
    id_pegawai bigint
    nomor_meja int
    jam_masuk timestamp
    jam_pulang timestamp
    ijin varchar
    keterangan varchar
    created_at timestamp
    updated_at timestamp
}

Table rencana_repairs {
    id bigint
    id_produksi_repair bigint [ref: > produksi_repair.id]
    id_rencana_pegawai bigint [ref: > rencana_pegawais.id]
    id_modal_repair bigint [ref: > modal_repairs.id]
    kw varchar
    created_at timestamp
    updated_at timestamp
}

Table hasil_repairs {
    id bigint
    id_produksi_repair bigint [ref: > produksi_repair.id]
    id_rencana_repair bigint [ref: > rencana_repairs.id]
    jumlah int
    created_at timestamp
    updated_at timestamp
}

Table validasi_repairs {
    id bigint
    id_produksi_repair bigint [ref: > produksi_repair.id]
    role varchar
    status varchar
    created_at timestamp
    updated_at timestamp
}